get item by name & desc
