# spec/api-spec.yaml
@@ -104,6 +104,11 @@ paths:
           required: true
           schema:
             type: string
+        - in: query
+          name: desc
+          required: false
+          schema:
+            type: string
       responses:
         200:
           description: Successful response
